crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-for-loop-with-context-variable-iterator/error.txt
Found 1 error:

Error: This value cannot be modified

Modifying a value used previously in JSX is not allowed. Consider moving the modification before the JSX.

error.todo-for-loop-with-context-variable-iterator.ts:18:30
  16 |   // a re-initialization than a reassignment.
  17 |   // Until we model this "new environment" semantic, we allow this case to error
> 18 |   for (let i = MIN; i <= MAX; i += INCREMENT) {
     |                               ^ `i` cannot be modified
  19 |     items.push(
  20 |       <Stringify key={i} onClick={() => data.get(i)} shouldInvokeFns={true} />
  21 |     );
